@@ -1258,6 +1258,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\il_squish.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\il_stack.c"
 				>
 				<FileConfiguration
