@@ -294,7 +294,9 @@ Up to 2009-01-02 (since 1.7.5 release) Denton Woods <doomwiz@users.sf.net>
 	* il_vtf.c: Changed VtfInitMipmaps calls to VtfInitFacesMipmaps calls and changed iLoadVtfInternal
 	  to support environment maps.
 	* il.h:384: Added IL_SPHEREMAP.
+	* il_hdr.c:467: Changed to char* to get OS X to stop issuing a warning.
+	* il_size.c:53: Changed return value to ILuint.
+	* devil_cpp_wrapper.hpp: Removed MSVC++ #pragma at the top for deprecated lib.
 
 2009-01-31 Denton Woods <doomwiz@users.sf.net>
 	* Added newlines to several files to keep gcc quiet.
-	
